<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gg_li_cl_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/gg_li_tv_input_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gg_li_input_title"
        android:textColor="#1C1F26"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gg_li_et_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="#F1F4FA"
        android:hint="@string/gg_li_hint_income"
        android:inputType="numberDecimal"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gg_li_tv_input_title" />

    <EditText
        android:id="@+id/gg_li_et_expenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="#F1F4FA"
        android:hint="@string/gg_li_hint_expenses"
        android:inputType="numberDecimal"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gg_li_et_income" />

    <Button
        android:id="@+id/gg_li_btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="#2962FF"
        android:textColor="#FFFFFF"
        android:text="@string/gg_li_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gg_li_et_expenses" />

</androidx.constraintlayout.widget.ConstraintLayout>
